--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-p {
-   text-align: center;
-}
 body {
-background:#CCCCCC
-{
-strong {
- color:red
-{
+    background:#CCCCCC      text-align: center;
+{  
+
+h1 {
+    text-align: center;
+
+
